--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/days.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/days.xml
@@ -9,6 +9,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Days">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:id="@+id/settingsTitle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="5dp"/>
+
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -34,4 +43,42 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="onClickAddDay"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/okButtonMonth"
+        android:text="ok"
+        android:layout_toLeftOf="@id/settingsButtonDays"
+        android:layout_toStartOf="@id/settingsButtonDays"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
+        android:visibility="gone"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTitleMonth"
+        android:hint="vul de maand in"
+        android:layout_toLeftOf="@id/okButtonMonth"
+        android:layout_toStartOf="@id/okButtonMonth"
+        android:layout_alignBottom="@id/okButtonMonth"
+        android:visibility="gone"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/titleMonth"
+        android:visibility="gone"
+        android:textSize="22sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/idMonth"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
