--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
@@ -93,6 +93,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour1"/>
 
@@ -105,6 +107,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin1"/>
 
@@ -117,6 +121,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour1"/>
 
@@ -129,12 +135,16 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin1"/>
 
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour2"/>
 
@@ -147,6 +157,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin2"/>
 
@@ -159,6 +171,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour2"/>
 
@@ -171,12 +185,16 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin2"/>
 
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour3"/>
 
@@ -189,6 +207,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin3"/>
 
@@ -201,6 +221,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour3"/>
 
@@ -213,6 +235,8 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:text="00"
+                android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin3"/>
 
@@ -225,7 +249,8 @@
         android:text="opslaan"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:onClick="onClickSave"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -233,6 +258,7 @@
         android:text="annuleren"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:onClick="onClickCancel"/>
 
 </RelativeLayout>
