--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
@@ -73,7 +73,8 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="piekdag"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:id="@+id/dayType"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -96,7 +97,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginHour1"/>
+                android:id="@+id/beginHour1"
+                android:onClick="onClickBeginHour1"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -110,7 +112,8 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginMin1"/>
+                android:id="@+id/beginMin1"
+                android:onClick="onClickBeginMin1"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -124,7 +127,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endHour1"/>
+                android:id="@+id/endHour1"
+                android:onClick="onClickEndHour1"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -138,7 +142,8 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endMin1"/>
+                android:id="@+id/endMin1"
+                android:onClick="onClickEndMin1"/>
 
             <EditText
                 android:layout_width="40dp"
@@ -146,7 +151,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginHour2"/>
+                android:id="@+id/beginHour2"
+                android:onClick="onClickBeginHour2"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -160,7 +166,8 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginMin2"/>
+                android:id="@+id/beginMin2"
+                android:onClick="onClickBeginMin2"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -174,7 +181,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endHour2"/>
+                android:id="@+id/endHour2"
+                android:onClick="onClickEndHour2"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -188,7 +196,8 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endMin2"/>
+                android:id="@+id/endMin2"
+                android:onClick="onClickEndMin2"/>
 
             <EditText
                 android:layout_width="40dp"
@@ -196,7 +205,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginHour3"/>
+                android:id="@+id/beginHour3"
+                android:onClick="onClickBeginHour3"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -210,7 +220,8 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/beginMin3"/>
+                android:id="@+id/beginMin3"
+                android:onClick="onClickBeginMin3"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -224,7 +235,8 @@
                 android:text="0"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endHour3"/>
+                android:id="@+id/endHour3"
+                android:onClick="onClickEndHour3"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -238,20 +250,23 @@
                 android:text="00"
                 android:gravity="center"
                 android:inputType="number"
-                android:id="@+id/endMin3"/>
-
+                android:id="@+id/endMin3"
+                android:onClick="onClickEndMin3"/>
         </GridLayout>
+
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:rowCount="1"
             android:columnCount="2"
             android:layout_marginTop="40dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Richttijd: "
                 android:textSize="20sp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -259,6 +274,7 @@
                 android:text="2:11"
                 android:textSize="20sp"/>
         </GridLayout>
+
     </LinearLayout>
 
     <Button
