--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/addwalk.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:rowCount="2"
-            android:columnCount="3"
+            android:columnCount="2"
             android:id="@+id/gridWijkTypeDag">
 
             <TextView
@@ -50,18 +50,10 @@
                 android:textSize="20sp"
                 android:id="@+id/wijk"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="41B"
-                android:textSize="20sp"
-                android:id="@+id/districtCode"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="bewerken"
-                android:id="@+id/wijkEditButton"/>
+            <Spinner
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:id="@+id/spinnerDistrict"/>
 
             <TextView
                 android:layout_width="100dp"
@@ -69,18 +61,10 @@
                 android:text="Type dag: "
                 android:textSize="20sp"/>
 
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="piekdag"
-                android:textSize="20sp"
-                android:id="@+id/dayType"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="bewerken"
-                android:id="@+id/typeDagEditButton"/>
+            <Spinner
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:id="@+id/spinnerDayType"/>
 
         </GridLayout>
 
@@ -94,7 +78,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour1"
@@ -109,7 +93,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin1"
@@ -124,7 +108,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour1"
@@ -139,7 +123,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin1"
@@ -148,7 +132,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour2"
@@ -163,7 +147,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin2"
@@ -178,7 +162,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour2"
@@ -193,7 +177,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin2"
@@ -202,7 +186,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginHour3"
@@ -217,7 +201,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/beginMin3"
@@ -232,7 +216,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:hint="0"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endHour3"
@@ -247,7 +231,7 @@
             <EditText
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="00"
+                android:hint="00"
                 android:gravity="center"
                 android:inputType="number"
                 android:id="@+id/endMin3"
@@ -271,7 +255,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/timeGoal"
-                android:text="2:11"
                 android:textSize="20sp"/>
         </GridLayout>
 
