--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/days.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/days.xml
@@ -17,7 +17,8 @@
         android:textSize="22sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:onClick="onClickTitle"/>
 
     <ImageView
         android:layout_width="36dp"
